immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: immich
spec:
  selector:
    matchLabels:
      app: immich
  replicas: 1
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
      - name: immich
        image: ghcr.io/immich-app/immich-server:v3
        ports:
          - name: immich-server
            containerPort: 2283
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-data

---

apiVersion: v1
kind: Service
metadata: 
  name: immich
  namespace: immich
spec: 
  selector: 
    app: immich
  ports:
    - name: immich-port
      port: 2283
      targetPort: immich-server
